<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:labelFor="@id/dialog_name"
        android:paddingStart="@dimen/medium"
        android:paddingEnd="@dimen/medium"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/error_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:padding="@dimen/small"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/error_text"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_name" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:labelFor="@id/dialog_date"
        android:padding="@dimen/medium"
        android:text="@string/time_format"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_name" />

    <RadioGroup
        android:id="@+id/dialog_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/error_name">


        <RadioButton
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/medium"
            android:text="@string/date"
            android:textSize="@dimen/title_text" />

        <RadioButton
            android:id="@+id/date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/medium"
            android:text="@string/date_time"
            android:textSize="@dimen/title_text" />

        <RadioButton
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/medium"
            android:text="@string/duration"
            android:textSize="@dimen/title_text" />
    </RadioGroup>

            <TextView
                android:id="@+id/error_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/error_text"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_date" />

</androidx.constraintlayout.widget.ConstraintLayout>