<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/drawer_category_create">
        <menu>
            <item
                android:id="@+id/nav_journal"
                android:icon="@drawable/ic_journal"
                android:title="@string/drawer_journal"/>
        </menu>
    </item>

    <item android:title="@string/drawer_category_view">
        <menu>
            <item
                android:id="@+id/nav_reports"
                android:icon="@drawable/ic_report"
                android:title="@string/drawer_reports"/>
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar"
                android:title="@string/drawer_calendar"/>
        </menu>
    </item>

    <item android:title="@string/drawer_category_manage">
        <menu>
            <item
                android:id="@+id/nav_templates"
                android:icon="@drawable/ic_template"
                android:title="@string/drawer_templates"/>
            <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_category"
                android:title="@string/drawer_categories"/>
            <!--TODO add flares and backup navigation items-->
        </menu>
    </item>

</menu>
